--- a/festival-platfort/src/components/MainSection/MainSection.css
+++ b/festival-platfort/src/components/MainSection/MainSection.css
@@ -12,11 +12,12 @@
 .carousel-container {
   width: 100%;
   max-width: 800px;
+  margin: 0 auto;
 }
 
 .carousel-image {
-  max-width: 100%;
-  max-height: 400px;
+  width: 800px;
+  height: 400px;
   object-fit: cover;
   border-radius: 10px;
 }
