--- a/festival-platform/src/components/Header/Header.css
+++ b/festival-platform/src/components/Header/Header.css
@@ -23,7 +23,7 @@
 .menu-button {
   background-color: #001529;
   font-size: 16px;
-  padding: 5px 15px;
+  padding: 5px 10px;
   border-radius: 4px;
 }
 
@@ -35,12 +35,12 @@
 @media (max-width: 767px) {
   .header {
     height: auto;
-    padding: 10px 15px;
+    padding: 10px;
   }
 
   .logo {
     font-size: 12px;
-    margin-right: 15px;
+    margin-right: 10px;
   }
 
   .menu-buttons {
