--- a/festival-platform/src/components/MainSection/components/DateSelector/DateSelector.css
+++ b/festival-platform/src/components/MainSection/components/DateSelector/DateSelector.css
@@ -1,7 +1,7 @@
 .date-selector-container {
   background-color: #192a56;
-  padding: 20px;
-  border-radius: 10px;
+  padding: 40px 100px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
