--- a/festival-platform/src/components/MainSection/MainSection.css
+++ b/festival-platform/src/components/MainSection/MainSection.css
@@ -11,7 +11,6 @@
 }
 
 .review-section {
-  margin-top: 24px;
   padding: 16px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
@@ -33,7 +32,14 @@
 
 .info-container {
   text-align: center;
-  max-width: 800px;
+  max-width: 1100px;
+}
+
+@media (max-width: 1100px) {
+  .info-container {
+    max-width: 90%;
+    padding: 15px;
+  }
 }
 
 .title {
