--- a/festival-platform/src/components/MainSection/components/DateSelector/DateSelector.css
+++ b/festival-platform/src/components/MainSection/components/DateSelector/DateSelector.css
@@ -15,11 +15,20 @@
   font-size: 1.5rem;
 }
 
+.check-availability {
+  font-size: medium;
+}
+
 .ant-picker-dropdown {
   position: absolute !important;
   left: 50% !important;
   top: 50% !important;
   transform: translate(-50%, 35%) !important;
+}
+
+.label {
+  color: white;
+  font-size: medium;
 }
 
 .controls {
@@ -29,6 +38,12 @@
   flex-wrap: wrap;
   margin-bottom: 20px;
   justify-content: center;
+}
+
+.participant-input {
+  width: 50px;
+  text-align: center;
+  font-size: 16px;
 }
 
 .participants-select {
